<resources>
    <string name="app_name">Тренажёр по компьютерным сетям</string>
    <string name="main_phrase">Проверьте свои знания с помощью викторин!</string>
    <string name="background_image">Background image</string>
    <string name="description_of_app">Если вы просто ищете увлекательный способ узнать новые факты, наши викторины созданы для того, чтобы развлекать и обучать.</string>
    <string name="image_of_topic">Image of topic</string>
    <string name="_15_15">15/15</string>
    <string name="_15_questions">15 вопросов</string>
    <string name="next">Далее</string>
    <string name="congratulations">Поздравляем\nхорошая работа!</string>
    <string name="back_to_home">На главную страницу</string>
    <string name="search_topic">Поиск темы</string>
    <string name="reset">Сбросить</string>
    <string name="filter">Фильтры</string>
    <string name="auth_text">Авторизация</string>
    <string name="registration_text">Регистрация</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="auth">Авторизоваться</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="go_to_registration">К регистрации</string>
    <string name="go_to_auth">К авторизации</string>
    <string name="image_of_user_profile">Image of user profile</string>
</resources>